--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+mate-calc (1.17.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Martin Wimpress <martin@mate-desktop.org>  Sat, 14 Jan 2017 01:02:42 +0000
+
+mate-calc (1.8.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Stefano Karapetsas <stefano@karapetsas.com>  Thu, 06 Mar 2014 23:24:56 +0100
+
+mate-calc (1.7.90-1) unstable; urgency=low
+
+  * New upstream development release
+
+ -- Stefano Karapetsas <stefano@karapetsas.com>  Wed, 19 Feb 2014 19:03:13 +0100
+
 mate-calc (1.7.0-1) unstable; urgency=medium
 
   * New upstream development release.
