--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,17 @@
 mate-calc (1.18.0-1) UNRELEASED; urgency=medium
 
+  [ Martin Wimpress ]
   * New upstream release.
 
- -- Martin Wimpress <martin.wimpress@ubuntu.com>  Mon, 13 Mar 2017 18:12:41 +0000
+  [ Vangelis Mouhtsis ]
+  * debian/compat:
+    + Update compat version.
+  * debian/control:
+    + Bump debhelper version to (>= 10).
+  * debian/rules:
+    + Add new block for override_dh_missing.
+
+ -- Vangelis Mouhtsis <vangelis@gnugr.org>  Wed, 05 Jul 2017 20:05:29 +0300
 
 mate-calc (1.17.0-1) unstable; urgency=medium
 
