--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ mate-calc (1.18.0-1) UNRELEASED; urgency=medium
     + Bump debhelper version to (>= 10.3~).
   * debian/rules:
     + Add new block for override_dh_missing.
+  * debian/control:
+    + Bump Standards-Version: to 4.0.0. No changes needed.
 
  -- Vangelis Mouhtsis <vangelis@gnugr.org>  Wed, 05 Jul 2017 20:05:29 +0300
 
