--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mate-calc (1.18.0-1) UNRELEASED; urgency=medium
+mate-calc (1.18.0-1) unstable; urgency=medium
 
   [ Martin Wimpress ]
   * New upstream release.
@@ -15,7 +15,12 @@ mate-calc (1.18.0-1) UNRELEASED; urgency=medium
   * debian/rules:
     + Disable autoreconf, handled by autogen.sh.
 
- -- Vangelis Mouhtsis <vangelis@gnugr.org>  Wed, 05 Jul 2017 20:05:29 +0300
+  [ Mike Gabriel ]
+  * debian/patches:
+    + Add 1001_add-keywords-field-to-desktop-file.patch. Provide Keywords=
+      field in .desktop file.
+
+ -- Mike Gabriel <sunweaver@debian.org>  Tue, 25 Jul 2017 20:15:36 +0200
 
 mate-calc (1.17.0-1) unstable; urgency=medium
 
