--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mate-calc (1.18.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Martin Wimpress <martin.wimpress@ubuntu.com>  Thu, 26 Oct 2017 20:25:49 +0100
+
 mate-calc (1.18.0-1) unstable; urgency=medium
 
   [ Martin Wimpress ]
