--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-mate-calc (1.18.1-1) UNRELEASED; urgency=medium
+mate-calc (1.18.1-1) unstable; urgency=medium
 
+  [ Martin Wimpress ]
   * New upstream release.
 
- -- Martin Wimpress <martin.wimpress@ubuntu.com>  Thu, 26 Oct 2017 20:25:49 +0100
+  [ Mike Gabriel ]
+  * debian/control: Bump Standards-Version: to 4.1.1. No changes needed.
+
+ -- Mike Gabriel <sunweaver@debian.org>  Thu, 02 Nov 2017 09:50:23 +0100
 
 mate-calc (1.18.0-1) unstable; urgency=medium
 
