--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mate-calc (1.19.0-0ubuntu1) UNRELEASED; urgency=medium
+mate-calc (1.19.0-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
 
