--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-mate-calc (1.20.0-0ubuntu1) bionic; urgency=medium
+mate-calc (1.20.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
 
  -- Martin Wimpress <martin.wimpress@ubuntu.com>  Wed, 07 Feb 2018 14:03:57 +0000
 
-mate-calc (1.19.0-0ubuntu1) bionic; urgency=medium
+mate-calc (1.19.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
 
