debian/changelog: New upstream release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mate-calc (1.20.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Martin Wimpress <martin.wimpress@ubuntu.com>  Mon, 26 Mar 2018 18:52:03 +0100
+
 mate-calc (1.20.0-2) unstable; urgency=medium
 
   [ Mike Gabriel ]
