--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-mate-calc (1.20.1-1) UNRELEASED; urgency=medium
+mate-calc (1.20.1-1) unstable; urgency=medium
 
+  [ Martin Wimpress ]
   * New upstream release.
+  * debian/patches:
+    + Drop 0001_init_gtk_before_math_equation_new.patch. Applied upstream.
 
- -- Martin Wimpress <martin.wimpress@ubuntu.com>  Mon, 26 Mar 2018 18:52:03 +0100
+  [ Mike Gabriel ]
+  * debian/copyright:
+    + Update copyright attributions.
+
+ -- Mike Gabriel <sunweaver@debian.org>  Thu, 05 Apr 2018 11:48:02 +0200
 
 mate-calc (1.20.0-2) unstable; urgency=medium
 
