--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,21 @@
-mate-calc (1.22.1-1) UNRELEASED; urgency=medium
+mate-calc (1.22.1-1) unstable; urgency=medium
 
+  [ Martin Wimpress ]
   * New upstream release.
+  * debian/mate-calc-common.install:
+    + Correct order.
 
- -- Martin Wimpress <martin.wimpress@ubuntu.com>  Mon, 18 Mar 2019 20:30:23 +0000
+  [ Mike Gabriel ]
+  * debian/{compat,control}:
+    + Use debhelper-compat notation. Bump to DH compat level version 12.
+  * debian/control:
+    + Bump Standards-Version: to 4.4.0. No changes needed.
+  * debian/rules:
+    + Drop dbgsym-migration dh_strip override.
+  * debian/copyright:
+    + Update copyright attributions.
+
+ -- Mike Gabriel <sunweaver@debian.org>  Wed, 31 Jul 2019 16:50:19 +0200
 
 mate-calc (1.20.3-1) unstable; urgency=medium
 
