--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mate-calc (1.22.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Martin Wimpress <martin.wimpress@ubuntu.com>  Sat, 21 Sep 2019 13:00:14 +0200
+
 mate-calc (1.22.1-1) unstable; urgency=medium
 
   [ Martin Wimpress ]
