--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-mate-calc (1.22.2-1) UNRELEASED; urgency=medium
+mate-calc (1.22.2-1) unstable; urgency=medium
 
+  [ Martin Wimpress ]
   * New upstream release.
 
- -- Martin Wimpress <martin.wimpress@ubuntu.com>  Sat, 21 Sep 2019 13:00:14 +0200
+ -- Mike Gabriel <sunweaver@debian.org>  Fri, 27 Sep 2019 19:46:28 +0200
 
 mate-calc (1.22.1-1) unstable; urgency=medium
 
