--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+mate-calc (1.24.0-1) UNRELEASED; urgency=medium
+
+  [ Mike Gabriel ]
+  * debian/control:
+    + Add Rules-Requires-Root: field and set it to no.
+    + Bump Standards-Version: to 4.5.0. No changes needed.
+  * debian/upstream/metadata:
+    + Drop obsolete fields Contact: and Name:.
+    + Append .git suffix to URLs in Repository: field.
+
+ -- Martin Wimpress <martin.wimpress@ubuntu.com>  Thu, 13 Feb 2020 09:41:28 +0000
+
 mate-calc (1.22.2-1) unstable; urgency=medium
 
   [ Martin Wimpress ]
