--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ mate-calc (1.24.0-1) UNRELEASED; urgency=medium
     + Drop obsolete fields Contact: and Name:.
     + Append .git suffix to URLs in Repository: field.
 
+  [ Martin Wimpress ]
+  * New upstream release.
+
  -- Martin Wimpress <martin.wimpress@ubuntu.com>  Thu, 13 Feb 2020 09:41:28 +0000
 
 mate-calc (1.22.2-1) unstable; urgency=medium
