--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mate-calc (1.24.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Martin Wimpress <martin.wimpress@ubuntu.com>  Mon, 17 Aug 2020 16:56:43 +0100
+
 mate-calc (1.24.0-1) unstable; urgency=medium
 
   [ Mike Gabriel ]
