--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-mate-calc (1.24.1-1) UNRELEASED; urgency=medium
+mate-calc (1.24.1-1) unstable; urgency=medium
 
+  [ Martin Wimpress ]
   * New upstream release.
 
- -- Martin Wimpress <martin.wimpress@ubuntu.com>  Mon, 17 Aug 2020 16:56:43 +0100
+  [ Mike Gabriel ]
+  * debian/control:
+    + Bump DH compat level to version 13.
+  * debian/copyright:
+    + Update copyright attributions.
+
+ -- Mike Gabriel <sunweaver@debian.org>  Fri, 21 Aug 2020 23:44:59 +0200
 
 mate-calc (1.24.0-1) unstable; urgency=medium
 
